--- a/formulario.css
+++ b/formulario.css
@@ -21,6 +21,7 @@
             width: 100%;
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.9);
+            margin: 10;
             border: 1px solid #ced4da;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
