--- a/formulario.css
+++ b/formulario.css
@@ -58,7 +58,7 @@ header {
 /* Corpo da página */
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url('imagens/fundofinal.jpg'); /* Imagem de fundo */
+    background-image: url('Faculdade.jpg'); /* Imagem de fundo */
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
