--- a/inicio.css
+++ b/inicio.css
@@ -58,7 +58,7 @@ body {
 
     font-family: 'Roboto', sans-serif;
 
-    background-image: url('imagens/fundofinal.jpg'); /* Imagem de fundo */
+    background-image: url('Fundo.jpeg'); /* Imagem de fundo */
 
     background-attachment: fixed; /* Imagem de fundo fixa durante o scroll */
 
