--- a/inicio.css
+++ b/inicio.css
@@ -120,7 +120,7 @@ body {
 
     font-family: 'Roboto', sans-serif;
 
-    background-image: url('imagens/fundofinal.jpg');
+    background-image: url('Fundo.jpeg');
 
     background-attachment: fixed;
 
